# pokemon-streamlit

./: Dockerfile  README.md  app.py  docker-compose.yml  pokemon.json  pyproject.toml  requirements.txt
