[tool.poetry]
name = "pokemon-streamlit"
version = "0.1.0"
description = ""
authors = ["dualskana <dualskana@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
